with ball background

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
   <div id="root">
 
   </div>
+  <div id="webgl">
+
+  </div>
+  <script src="three.js"></script>
+  <script src="ball.js"></script>
 </body>
 
 </html>
