Putting all CSS in index.css and removing ball animation. Also added batting average stats.

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
-  <div onmousemove="myMouseMover(event)" id="root">
+  <div id="root">
 
   </div>
   <div id="webgl">
 
   </div>
-  <script src="three.js"></script>
+  <!--<script src="three.js"></script>-->
   <script src="ball.js"></script>
 </body>
 
