Cleaning up code formatting

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
   <link href="css/styles.css" rel="stylesheet" />-->
-  <link rel="stylesheet" href="./milligram.css" />
+  <!--<link rel="stylesheet" href="./milligram.css" />-->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
   <title>Baseball Stats</title>
 </head>
 
